--- a/README
+++ b/README
@@ -17,8 +17,15 @@ In another terminal in the same Docker container, run
 ```
 source /opt/ros/humble/setup.bash
 source install/setup.bash
-ros2 launch h264_image_transport launch_encoder_and_publisher.py
+ros2 launch h264_image_transport launch_encoder.py
 ```
+
+```
+source /opt/ros/humble/setup.bash
+source install/setup.bash
+ros2 launch h264_image_transport launch_publisher.py
+```
+
 
 This starts a node that publishes a video and also launches the encoder. Note that the video may be very short, so the publisher could stop. In this case, you would simply have to restart the node.
 
