--- a/README
+++ b/README
@@ -8,6 +8,7 @@ To run a simple example, build the Dockerfile and make sure there is a file call
 ```
 source /opt/ros/humble/setup.bash
 source install/setup.bash
+export RMW_IMPLEMENTATION=rmw_cyclonedds_cpp
 ros2 launch h264_image_transport launch_decoder.py
 ```
 
@@ -17,12 +18,14 @@ In another terminal in the same Docker container, run
 ```
 source /opt/ros/humble/setup.bash
 source install/setup.bash
+export RMW_IMPLEMENTATION=rmw_cyclonedds_cpp
 ros2 launch h264_image_transport launch_encoder.py
 ```
 
 ```
 source /opt/ros/humble/setup.bash
 source install/setup.bash
+export RMW_IMPLEMENTATION=rmw_cyclonedds_cpp
 ros2 launch h264_image_transport launch_publisher.py
 ```
 
